# stim

./: .gitignore  AGENTS.md  README.md  pyproject.toml
skills/stim/: SKILL.md
src/stim/: __init__.py  cli.py  config.py  db.py  display.py  pharmaco.py
tests/: test_config.py  test_display.py  test_pharmaco.py  test_pk_features.py
