[project]
name = "stim"
version = "0.1.0"
description = "A CLI tool powered by Rich and SQLite"
requires-python = ">=3.10"
dependencies = [
    "plotext>=5.3.2",
    "python-dateutil>=2.9.0.post0",
    "rich>=15.0.0",
    "toml>=0.10.2",
    "typer>=0.26.7",
]

[project.scripts]
stim = "stim.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stim"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
